@@ -35,6 +35,10 @@ Release date: TBA
   * Added ``using-f-string-in-unsupported-version`` checker. Issued when ``py-version``
     is set to a version that does not support f-strings (< 3.6)
 
+* Properly emit ``duplicate-key`` when Enum members are duplicate dictionary keys
+
+  Closes #5150
+
 
 What's New in Pylint 2.11.2?
 ============================
